# websocket-in-rs

./: Cargo.toml  README.md
migrations/2024-03-04-182028_users/: up.sql
migrations/2024-04-04-183339_connections/: down.sql  up.sql
src/: main.rs
src/db/: index.rs  mod.rs  schema.rs
src/db/models/: connection.rs  user.rs
src/db/ops/: connection.rs  mod.rs  user.rs
src/modules/: mod.rs  route.rs
src/modules/auth/: index.rs  mod.rs  service.rs
src/modules/user/: index.rs  service.rs
src/modules/websocket/: connect.rs  custom.rs  disconnect.rs  index.rs  mod.rs  service.rs
