[package]
name = "hello"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
salvo = { version = '*', features = ["cors"]}
tokio = { version = "1", features = ["macros"] }
dotenv = "0.15.0"
serde = "1.0.197"
tracing = "0.1"
tracing-subscriber = "0.3"